src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__variable_length_array_defined_as_a_global_variable.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: parse_and_validate_buffered(src)
---
error[E044]: VLAs can not be defined as global variables
  ┌─ <internal>:3:13
  │
3 │             arr : ARRAY[*] OF DINT;
  │             ^^^ VLAs can not be defined as global variables
